--- a/src/source/views/sales.html
+++ b/src/source/views/sales.html
@@ -24,7 +24,7 @@
               <span class="link-text">Dashboard</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left inventory" id = "inventory">
+          <li class="navbar-item flexbox-left" id = "inventory">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="home-outline"></ion-icon>
@@ -40,7 +40,7 @@
               <span class="link-text">Orders</span>
             </a>
           </li>
-          <li class="navbar-item flexbox-left" id = "sales">
+          <li class="navbar-item flexbox-left sales" id = "sales">
             <a class="navbar-item-inner flexbox-left">
               <div class="navbar-item-inner-icon-wrapper flexbox">
                 <ion-icon name="pie-chart-outline"></ion-icon>
@@ -131,7 +131,7 @@
         </div>
     </div>
 
-    <div class="table">
+    <div class="table3">
         <h2><small>Products</small></h2>
         <div class="Card">
             <div class="CardInner">
@@ -149,7 +149,7 @@
 
         <div class ="frame">
             <div class="button-container">
-            <span class="button-text">Add Product</span>
+            <span class="button-text">Record Sale</span>
             <a href="#" class="btn" id = "addbutton" >+</a>
             </div>
         </div>
@@ -158,69 +158,53 @@
 
         <ul class="responsive-table">
           <li class="table-header">
-            <div class="col col-1">SKU</div>
-            <div class="col col-2">Name</div>
-            <div class="col col-3">Number <br> in Stock</div>
-            <div class="col col-4">Number <br> on Order</div>
-            <div class="col col-5">Unit <br> Cost</div>
-            <div class="col col-6">Inventory <br> Value</div>
-            <div class="col col-7">Expected <br> Sales</div>
+            <div class="col col-1">Date</div>
+            <div class="col col-2">SKU</div>
+            <div class="col col-3">Product <br>Name</div>
+            <div class="col col-4">Quantity</div>
+            <div class="col col-5">Unit <br> Price</div>
+            <div class="col col-6">Total<br>Value</div>
+
           </li>
           <ul class="responsive-row">
           <li class="table-row">
-            <div class="col col-1" data-label="SKU">FRG-123-LG-2</div>
-            <div class="col col-2" data-label="Name">LG Smart Fridge</div>
-            <div class="col col-3" data-label="StockAmount">12</div>
-            <div class="col col-4" data-label="OrderAmount">3</div>
-            <div class="col col-5" data-label="UnitCost">$9,000</div>
-            <div class="col col-6" data-label="InventoryValue">$108,000</div>
-            <div class="col col-7" data-label="ExpectedSales">4</div>
+            <div class="col col-1" data-label="Date"><svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
+                </svg> 
+                01/01/24
+            </div>
+            <div class="col col-2" data-label="SKU">FRG-123-LG-2</div>
+            <div class="col col-3" data-label="Product">LG Smart Fridge</div>
+            <div class="col col-4" data-label="Quantity">2</div>
+            <div class="col col-5" data-label="UnitPrice">$9,000</div>
+            <div class="col col-6" data-label="TotalValue">$18,000</div>
           </li>
           <li class="table-row">
-            <div class="col col-1" data-label="SKU">NDS-424-DS-1</div>
-            <div class="col col-2" data-label="Name">Nintendo DS</div>
-            <div class="col col-3" data-label="StockAmount">43</div>
-            <div class="col col-4" data-label="OrderAmount">12</div>
-            <div class="col col-5" data-label="UnitCost">$250</div>
-            <div class="col col-6" data-label="InventoryValue">$10,750</div>
-            <div class="col col-7" data-label="ExpectedSales">30</div>
+            <div class="col col-1" data-label="Date"><svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
+                </svg> 
+            01/04/24
+            </div>
+            <div class="col col-2" data-label="SKU">FRG-123-LG-2</div>
+            <div class="col col-3" data-label="Product">LG Smart Fridge</div>
+            <div class="col col-4" data-label="Quantity">1</div>
+            <div class="col col-5" data-label="UnitPrice">$9,000</div>
+            <div class="col col-6" data-label="TotalValue">$9,000</div>
           </li>
           <li class="table-row">
-            <div class="col col-1" data-label="SKU">PREE</div>
-            <div class="col col-2" data-label="Name">John Smith</div>
-            <div class="col col-3" data-label="StockAmount">$341</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
+            <div class="col col-1" data-label="Date">
+                <svg class="svg-icon productButton" id ="productButton1" style="width: 1em; height: 1em;vertical-align: middle;fill: currentColor;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M512.197498 752.238526 158.499897 398.540925c-18.73776-18.73776-18.73776-49.092092 0-67.828828s49.092092-18.73776 67.828828 0l285.868773 285.868773 285.868773-285.868773c18.73776-18.73776 49.092092-18.73776 67.828828 0s18.73776 49.092092 0 67.828828L512.197498 752.238526z"  />
+                </svg> 
+                01/05/24
+            </div>
+            <div class="col col-2" data-label="SKU">NDS-424-DS-1</div>
+            <div class="col col-3" data-label="Product">NintendoDS</div>
+            <div class="col col-4" data-label="Quantity">1</div>
+            <div class="col col-5" data-label="UnitPrice">$250</div>
+            <div class="col col-6" data-label="TotalValue">$250</div>
           </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">42311</div>
-            <div class="col col-2" data-label="Name">John Carpenter</div>
-            <div class="col col-3" data-label="StockAmount">$115</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">42311</div>
-            <div class="col col-2" data-label="Name">John Carpenter</div>
-            <div class="col col-3" data-label="StockAmount">$115</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
-          </li>
-          <li class="table-row">
-            <div class="col col-1" data-label="SKU">42311</div>
-            <div class="col col-2" data-label="Name">John Carpenter</div>
-            <div class="col col-3" data-label="StockAmount">$115</div>
-            <div class="col col-4" data-label="OrderAmount">Pending</div>
-            <div class="col col-5" data-label="UnitCost">John Doe</div>
-            <div class="col col-6" data-label="InventoryValue">$350</div>
-            <div class="col col-7" data-label="ExpectedSales">Pending</div>
-          </li>
+          
         </ul>
         </ul>
     </div>
@@ -574,6 +558,39 @@
 
     });
 
+</script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const productButtons = document.querySelectorAll(".productButton");
+        const productPopups = document.querySelectorAll(".productContent");
+    
+        productButtons.forEach(function(productButton, index) {
+            productButton.addEventListener("click", function(event) {
+                
+                productPopups.forEach(function(popup) {
+                    popup.style.display = "none";
+                });
+    
+                
+                const popup = productPopups[index];
+                popup.style.display = "flex";
+                popup.style.top = `${productButton.offsetTop + productButton.offsetHeight}px`;
+                popup.style.left = `${productButton.offsetLeft}px`;
+    
+                event.stopPropagation();
+            });
+        });
+    
+        document.addEventListener("click", function(event) {
+            productPopups.forEach(function(productPopup) {
+                if (!productPopup.contains(event.target)) {
+                    productPopup.style.display = "none"; 
+                }
+            });
+        });
+    });
+    
 </script>
 
 
