Update map.css to make table responsive

--- a/src/source/public/map.css
+++ b/src/source/public/map.css
@@ -540,6 +540,8 @@ body {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
+    height: 25%; 
+    overflow-y: scroll;
   }
 
 .table-header {
